docs/styles/intro.css
/* intro-panel */

.intro-panel-common {
    display: flex;
    justify-content: center;
    width: 100%;
    height: auto;
}

.intro-panel {
    flex-direction: row;
}

@media all and (orientation: portrait) {
    .intro-panel {
        flex-direction: column;
    }
}

/* intro-panel-header */

@media all and (orientation: portrait) {
    .intro-panel-header {
        font-size: 5em;
        margin-top: 0em;
        margin-bottom: 0.5em;
    }
}

/* intro-about-panel */

.intro-about-panel-common {
    text-align: justify;
    text-justify: inter-word;
}

.intro-about-panel {
    width: 30%;
    margin-left: 10%;
    margin-right: 10%;
}

@media all and (orientation: portrait) {
    .intro-about-panel {
        width: 90%;
        margin: 2em;
    }
}

/* intro-contact-panel */

.intro-contact-panel {
    width: 20%;
}

@media all and (orientation: portrait) {
    .intro-contact-panel {
        width: 90%;
        margin: 2em;
    }
}

/* intro-contact-panel-item */

.intro-contact-panel-item {
    margin-top: 0.5cm;
    font-size: 1.25em;
}

.intro-contact-panel-item:hover {
    cursor: pointer;  
}

@media all and (orientation: portrait) {
    .intro-contact-panel-item {
        font-size: 3em;
        margin-top: 1cm;
    }
}

/* intro-contact-panel-item-icon */

.intro-contact-panel-item-icon {
    padding-right: 0.25cm;
}

@media all and (orientation: portrait) {
    .intro-contact-panel-item-icon {
        padding-right: 1cm;
    }
}

